포스팅 상세 페이지 : overflow hidden 추가 (애드센스 추가 시 가로스크롤이 생기는 현상 fix)

--- a/style.scss
+++ b/style.scss
@@ -474,6 +474,7 @@ input:-webkit-autofill:active {
     #tt-body-page & {
       font-size: 16px;
       line-height: 1.5;
+      overflow: hidden;
       h1,
       h2,
       h3,
